Refactor app to comprehensive health management platform with database integration
- Replace simple barcode scanner with full-featured LiverWise health app
- Add Supabase database integration for user data persistence
- Implement comprehensive nutrition analysis with liver health scoring
- Add recipe management system with favorites and user submissions
- Create grocery list functionality with cloud sync
- Build profile management with image upload and user preferences
- Add contact form with database storage
- Implement premium subscription system with feature gating
- Replace basic UI with professional health-focused design
- Add navigation drawer and multi-screen architecture
- Integrate ML Kit barcode scanning with OpenFoodFacts API
- Create data models for recipes, grocery items, and user preferences

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             
-            <meta-data
+            <!-- <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
-                android:resource="@style/NormalTheme" />
+                android:resource="@style/NormalTheme" /> -->
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
