--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,14 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.3 
+  logger: ^2.0.2
   image_picker: ^1.0.7
   google_mlkit_barcode_scanning: ^0.14.1
   http: ^1.2.1
   path_provider: ^2.1.1
   supabase_flutter: ^2.3.4
+  flutter_stripe: ^10.1.1
+  google_mobile_ads: ^2.1.0
 
 dev_dependencies:
   flutter_test:
