--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   supabase_flutter: ^2.3.4
   flutter_stripe: ^10.1.1
   google_mobile_ads: ^2.1.0
+  in_app_purchase: ^3.1.13
 
 dev_dependencies:
   flutter_test:
