--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,9 @@ dependencies:
   http: ^1.2.1
   path_provider: ^2.1.1
   supabase_flutter: ^2.3.4
-  flutter_stripe: ^10.1.1
-  google_mobile_ads: ^2.1.0
+  google_mobile_ads: ^6.0.0
   in_app_purchase: ^3.1.13
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
