--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.barcode_scanner_app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- <-package="com.liverwise.app"-> -->
 
     <!-- ✅ Permissions go here -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -14,7 +14,7 @@
     <uses-feature android:name="android.hardware.screen.portrait" android:required="false" />
 
     <application
-        android:label="barcode_scanner_app"
+        android:label="LiverWise"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
