--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-feature android:name="android.hardware.screen.portrait" android:required="false" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:label="LiverWise"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
