--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: liver_wise
 description: A Flutter app to scan food barcodes and show nutrition info.
-version: 1.0.1+3
+version: 1.0.2+3
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -18,6 +18,8 @@ dependencies:
   google_mobile_ads: ^6.0.0
   in_app_purchase: ^3.1.13
   intl: ^0.19.0
+  change_app_package_name: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
