--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ version: 1.0.2+3
 environment:
   sdk: ">=3.1.0 <4.0.0"
 
+  
 dependencies:
   flutter:
     sdk: flutter
@@ -19,6 +20,7 @@ dependencies:
   in_app_purchase: ^3.1.13
   intl: ^0.19.0
   change_app_package_name: ^1.2.0
+  uni_links: ^0.6.1
 
 
 dev_dependencies:
