--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   in_app_purchase: ^3.1.13
   intl: ^0.19.0
   change_app_package_name: ^1.2.0
-  uni_links: ^0.6.1
+  uni_links: 0.5.1
 
 
 dev_dependencies:
