--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: liver_wise
 description: A Flutter app to scan food barcodes and show nutrition info.
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -20,7 +20,8 @@ dependencies:
   in_app_purchase: ^3.1.13
   intl: ^0.19.0
   change_app_package_name: ^1.2.0
-  uni_links: 0.5.1
+  app_links: ^6.3.2
+
 
 
 dev_dependencies:
