feat: Implement recipe management with ratings feature
- Added functionality for users to submit, edit, and delete recipes.
- Integrated recipe ratings system allowing users to rate recipes from 1 to 5 stars.
- Created a new RatingDialog widget for rating submissions.
- Updated DatabaseService to handle recipe ratings and management.
- Introduced RecipeCard widget to display submitted recipes with ratings.
- Enhanced ProfileScreen to load and display submitted recipes and their ratings.
- Added share functionality for recipes using share_plus package.
- Updated pubspec.yaml and platform-specific files to include necessary dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: liver_wise
 description: A Flutter app to scan food barcodes and show nutrition info.
-version: 1.0.3+8
+version: 1.0.3+9
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.19.0
   change_app_package_name: ^1.2.0
   app_links: ^6.3.2
+  share_plus: ^7.0.0  # For sharing recipes
 
 
 
