feat: Enhance media posting functionality with video support and thumbnail capture

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.2.3 
   logger: ^2.0.2
-  image_picker: ^1.0.7
+  video_player: ^2.8.2
+  image_picker: ^1.0.7  
+  video_thumbnail: ^0.5.3
   google_mlkit_barcode_scanning: ^0.14.1
   http: ^1.2.1
   path_provider: ^2.1.1
