--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: liver_wise
 description: A Flutter app to scan food barcodes and show nutrition info.
-version: 1.0.3+14
+version: 1.0.3+15
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -24,6 +24,8 @@ dependencies:
   change_app_package_name: ^1.2.0
   app_links: ^6.3.2
   share_plus: ^7.0.0  # For sharing recipes
+  aws_s3_client: ^1.0.0  # check for latest version
+
   
 
 
