--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   change_app_package_name: ^1.2.0
   app_links: ^6.3.2
   share_plus: ^7.0.0  # For sharing recipes
-  aws_s3_client: ^1.0.0  # check for latest version
+  amplify_storage_s3_dart: ^0.4.11
+
 
   
 
