--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ app.*.map.json
 # Environment files
 .env*
 !.env.example
+
+# Signing keys
+android/app/upload-keystore.jks
+*.jks
+*.keystore
+key.properties
