--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # App version - increment for each App Store submission
 # Format: MAJOR.MINOR.PATCH+BUILD_NUMBER
-version: 1.0.3+27
+version: 1.0.3+28
 
 # Flutter SDK constraints
 environment:
@@ -23,9 +23,9 @@ dependencies:
   logger: ^2.0.2
   
   # Media handling
-  video_player: ^2.8.2
+  # video_player: ^2.8.2
   image_picker: ^1.0.7
-  video_thumbnail: ^0.5.3
+  # video_thumbnail: ^0.5.3
   
   # Barcode scanning
   google_mlkit_barcode_scanning: ^0.14.1
