Refactor dialog handling and enhance contact service with device info
- Convert grocery list clear dialog to async/await pattern with proper confirmation handling
- Add auth user deletion via Cloudflare Worker in account deletion service
- Enhance contact service to collect device info and app version for better support
- Fix profile picture field name inconsistency in picture service
- Add device_info_plus and package_info_plus dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   
   # State management & storage
   shared_preferences: ^2.2.3
+
+  # Device information for contact screens
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
   
   # Logging & debugging
   logger: ^2.0.2
