--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,10 +41,17 @@
 		<string>ca-app-pub-5184516182162781~4277184838</string>
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
+
+		<!-- 🔐 Permissions -->
 		<key>NSCameraUsageDescription</key>
-		<string>This app needs camera access to scan barcodes.</string>
+		<string>This app needs camera access to scan barcodes and take profile pictures.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
-		<string>This app needs access to your photos to select images.</string>
+		<string>This app needs access to your photos to select and upload images.</string>
+		<key>NSPhotoLibraryAddUsageDescription</key>
+		<string>This app needs permission to save photos to your library.</string>
+		<key>NSUserTrackingUsageDescription</key>
+		<string>LiverWise uses this to support notifications and relevant app experiences.</string>
+
 		<key>SKAdNetworkItems</key>
 		<array>
 			<dict>
@@ -240,6 +247,7 @@
 				<string>3qcr597p9d.skadnetwork</string>
 			</dict>
 		</array>
+
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 		<key>UILaunchStoryboardName</key>
