--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   image_picker: ^1.0.7
   
   # Barcode scanning (last version that supports iOS 14)
-  google_mlkit_barcode_scanning: 0.7.0
-  google_mlkit_commons: 0.4.0
+  google_mlkit_barcode_scanning: ^0.13.0
+  google_mlkit_commons: ^0.9.0
 
   
   # Networking
