--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # App version - increment for each App Store submission
 # Format: MAJOR.MINOR.PATCH+BUILD_NUMBER
-version: 1.0.3+60
+version: 1.0.3+61
 
 # Flutter SDK constraints
 environment:
@@ -32,6 +32,8 @@ dependencies:
   # Barcode scanning (last version that supports iOS 14)
   google_mlkit_barcode_scanning: ^0.10.0
   google_mlkit_commons: ^0.6.1
+  camera: ^0.10.5+5  # For auto-barcode scanner
+
 
   
   # Networking
