--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,16 +49,16 @@
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
 
-		<!-- 🔐 Permissions -->
+		<!-- ✅ FIXED: Single Camera Permission (No Duplicates) -->
 		<key>NSCameraUsageDescription</key>
-		<string>This app needs camera access to scan barcodes and take profile pictures.</string>
+		<string>LiverWise needs camera access to scan product barcodes and take profile pictures.</string>
+		
+		<!-- ✅ FIXED: Photo Library Permissions -->
 		<key>NSPhotoLibraryUsageDescription</key>
-		<string>This app needs access to your photos to select and upload images.</string>
+		<string>LiverWise needs access to your photo library to select images for your profile and gallery.</string>
+		
 		<key>NSPhotoLibraryAddUsageDescription</key>
-		<string>This app needs permission to save photos to your library.</string>
-		<key>NSCameraUsageDescription</key>
-		<string>This app uses the camera to capture photos for analysis.</string>
-
+		<string>LiverWise needs permission to save images to your photo library.</string>
 
 		<!-- SKAdNetwork Configuration -->
 		<key>SKAdNetworkItems</key>
