--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,3 +4,7 @@ org.gradle.parallel=false
 android.enableR8.fullMode=false
 android.useAndroidX=true
 android.enableJetifier=true
+
+# ✅ FIX: 16 KB page alignment for native libraries (Android 15+)
+android.bundle.enableUncompressedNativeLibs=false
+android.bundle.buildToolsVersion=34.0.0
